Fixes missing background image

--- a/public/404.css
+++ b/public/404.css
@@ -1,4 +1,5 @@
 body {
-    background-attachment: url('./404.jpg');
+    background-image: url("./404.jpg");
+    background-attachment: fixed;
     background-repeat: no-repeat;
 }
